my second commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-	<body>
-		This Is Arbaz
+	<head>
+		<title>first page</title>
+	</head>
+	<body bgcolor="grey">
+		<h1>This Is Arbaz</h1><br>
+		<a href="secondindex.html">click here to go second page</a>
+
 	</body>
 </html>
