--- a/secondindex.html
+++ b/secondindex.html
@@ -1,5 +1,10 @@
 <html>
-	<body>
-		Hello Sikender Sir!
+	<head>
+		<title>second page</title>
+	</head>
+	<body bgcolor="green">
+		
+		<h1>Hello Sikender Sir!</h1><br>
+		<a href="index.html">click here to go to first page</a>
 	</body>
 </html>
